--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,8 @@ dependencies:
   fluttertoast: ^8.2.8
   msal_auth: ^2.0.1
   crypto: ^3.0.0
-
-
-  # The following adds the Cupertino Icons font to your application.
+  http: ^1.2.2
+  # The fllowing adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   syncfusion_flutter_gauges: ^26.2.9
