Api integrated of Live data

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   syncfusion_flutter_gauges: ^26.2.9
   kdgaugeview: ^1.0.4
+  sqflite: ^2.0.0+4
+  path_provider: ^2.0.9
+
 
 dev_dependencies:
   flutter_test:
