--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^4.0.0
   shared_preferences: ^2.3.2
   fluttertoast: ^8.2.8
   msal_auth: ^2.0.1
