--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   kdgaugeview: ^1.0.4
   sqflite: ^2.0.0+4
   path_provider: ^2.0.9
-
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
