--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
   fluttertoast: ^8.2.8
   msal_auth: ^2.0.1
   crypto: ^3.0.0
-  http: ^1.2.2
+  http: 1.2.2
   intl: ^0.18.0
+
   # The fllowing adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -42,6 +43,9 @@ dependencies:
   kdgaugeview: ^1.0.4
   sqflite: ^2.0.0+4
   path_provider: ^2.0.9
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
+  flutter_map_cancellable_tile_provider: ^3.0.2
 
 
 dev_dependencies:
